--- a/resources/css/web/app.css
+++ b/resources/css/web/app.css
@@ -132,4 +132,19 @@ transform: scale(.7);
 transform: scale(1);
 }
 }
-
+/* Change autocomplete styles in WebKit */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  /* border: 1px solid green; */
+  caret-color: #B5B5B5 ;
+  -webkit-text-fill-color: #A4A4A4;
+  -webkit-box-shadow: 0 0 0px 1000px #1C1C1C inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
