--- a/resources/css/web/app.css
+++ b/resources/css/web/app.css
@@ -219,3 +219,77 @@ select:-webkit-autofill:focus {
         transform: rotate(360deg);
     }
 }
+h1,h2,h3,h4,h5,h6{
+    font-weight: bold;
+}
+h1{
+    font-size: 46px;
+}
+
+h2{
+    font-size: 22px;
+}
+h3{
+    font-size: 20px;
+}
+h4{
+    font-size: 18px;
+}
+h5{
+    font-size: 16px;
+}
+h6{
+    font-size: 14px;
+    font-weight: bolder;
+}
+p,li{
+    font-size: 12px;
+}
+@media (min-width: 768px) {
+    h1{
+        font-size: 48px;
+    }
+    h2{
+        font-size: 24px;
+    }
+    h3{
+        font-size: 22px;
+    }
+    h4{
+        font-size: 20px;
+    }
+    h5{
+        font-size: 28px;
+    }
+    h6{
+        font-size: 16px;
+        font-weight: bolder;
+    }
+    p,li{
+        font-size: 14px;
+    }
+}
+@media (min-width: 1024px) {
+    h1{
+        font-size: 50px;
+    }
+    h2{
+        font-size: 26px;
+    }
+    h3{
+        font-size: 24px;
+    }
+    h4{
+        font-size: 22px;
+    }
+    h5{
+        font-size: 20px;
+    }
+    h6{
+        font-size: 18px;
+        font-weight: bolder;
+    }
+    p,li{
+        font-size: 16px;
+    }
+}
