--- a/resources/css/web/app.css
+++ b/resources/css/web/app.css
@@ -346,3 +346,6 @@ input[type="checkbox"]:checked + label:before {
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
 }
+.scroll-none{
+    scrollbar-width: none;
+}
