--- a/resources/css/admin/app.css
+++ b/resources/css/admin/app.css
@@ -186,3 +186,25 @@ transform: scale(1);
     background: #393939;
     border-radius: 5px;
 }
+input[type="radio"] + label span {
+    border: 0.5px solid #990C1A;
+    transition: background .2s,
+      transform .2s;
+}
+
+input[type="radio"] + label span:hover,
+input[type="radio"] + label:hover span{
+transform: scale(1.2);
+}
+
+input[type="radio"]:checked + label span {
+background-color: #990C1A;
+box-shadow: 0px 0px 0px 4px #1C1C1C inset;
+border-color: #990C1A;
+}
+input[type="radio"] + label span {
+    border-color: #787878;
+}
+input[type="radio"]:checked + label > span::before {
+    display: none;
+}
